--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -6,6 +6,11 @@
   border: 1px solid #B2D6EA;
   padding: 0 10px;
   cursor: pointer;
+  transition: 300ms;
+  &:hover {
+    background-color: $secondary-color;
+    transition: 300ms;
+  }
 }
 .button {
   width: 200px;
@@ -18,6 +23,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 300ms;
+  &:hover {
+    & img {
+      transform: scale(1.1);
+      transition: 300ms;
+    }
+  }
 }
 
 .tasks__update {
